force-app/main/default/objects/Deal_Build_History__c/Deal_Build_History__c.object-meta.xml
<CustomObject>
    <description>Deal History tracking While creation of Deal record via Component.</description>
    <label>Deal Build History</label>
    <nameField>
        <displayFormat>DBH-{000000}</displayFormat>
        <label>Deal Build History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Build History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>