force-app/main/default/objects/Deal_Build_History__c/fields/ai_PublishingInclusion__c.field-meta.xml
<CustomField>
    <fullName>ai_PublishingInclusion__c</fullName>
    <label>ai_PublishingInclusion</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>