force-app/main/default/objects/Deal_Build_History__c/fields/ai_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>ai_Recordtype__c</fullName>
    <label>ai_Recordtype</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>