force-app/main/default/objects/Deal_Build_History__c/fields/ai_selectedPublishedInclusionsDetail__c.field-meta.xml
<CustomField>
    <fullName>ai_selectedPublishedInclusionsDetail__c</fullName>
    <label>ai_selectedPublishedInclusionsDetail</label>
    <length>11216</length>
    <type>LongTextArea</type>
</CustomField>