force-app/main/default/objects/Deal_Build_History__c/fields/ai_Text__c.field-meta.xml
<CustomField>
    <fullName>ai_Text__c</fullName>
    <label>ai_Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>