force-app/main/default/objects/Deal_Build_History__c/fields/ap_Description__c.field-meta.xml
<CustomField>
    <fullName>ap_Description__c</fullName>
    <label>ap_Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>