force-app/main/default/objects/Deal_Build_History__c/fields/ap_name__c.field-meta.xml
<CustomField>
    <fullName>ap_name__c</fullName>
    <label>ap_name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>