force-app/main/default/objects/Deal_Build_History__c/fields/ap_Order__c.field-meta.xml
<CustomField>
    <fullName>ap_Order__c</fullName>
    <label>ap_Order</label>
    <type>TextArea</type>
</CustomField>