force-app/main/default/objects/Deal_Build_History__c/fields/ap_Site__c.field-meta.xml
<CustomField>
    <fullName>ap_Site__c</fullName>
    <label>ap_Site</label>
    <type>TextArea</type>
</CustomField>