force-app/main/default/objects/Deal_Build_History__c/fields/ap_Title__c.field-meta.xml
<CustomField>
    <fullName>ap_Title__c</fullName>
    <label>ap_Title</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>