force-app/main/default/objects/Deal_Build_History__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Deal Build History</relationshipLabel>
    <relationshipName>Deal_Build_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>