force-app/main/default/objects/Deal_Build_History__c/fields/hi_Deal_highlights__c.field-meta.xml
<CustomField>
    <fullName>hi_Deal_highlights__c</fullName>
    <label>hi_Deal_highlights</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>