force-app/main/default/objects/Deal_Build_History__c/fields/hi_Deal_title__c.field-meta.xml
<CustomField>
    <fullName>hi_Deal_title__c</fullName>
    <label>hi_Deal_title</label>
    <type>TextArea</type>
</CustomField>