force-app/main/default/objects/Deal_Build_History__c/fields/History_Saved_By__c.field-meta.xml
<CustomField>
    <fullName>History_Saved_By__c</fullName>
    <label>History Saved By`</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>BDM</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>