force-app/main/default/objects/Deal_Build_History__c/fields/ii_Description__c.field-meta.xml
<CustomField>
    <fullName>ii_Description__c</fullName>
    <label>ii_Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>