force-app/main/default/objects/Deal_Build_History__c/fields/in_accommodation__c.field-meta.xml
<CustomField>
    <fullName>in_accommodation__c</fullName>
    <label>in_accommodation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>