force-app/main/default/objects/Deal_Build_History__c/fields/in_country_context__c.field-meta.xml
<CustomField>
    <fullName>in_country_context__c</fullName>
    <label>in_country_context</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>