force-app/main/default/objects/Deal_Build_History__c/fields/in_Day__c.field-meta.xml
<CustomField>
    <fullName>in_Day__c</fullName>
    <label>in_Day</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>