force-app/main/default/objects/Deal_Build_History__c/fields/in_description__c.field-meta.xml
<CustomField>
    <fullName>in_description__c</fullName>
    <label>in_description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>