force-app/main/default/objects/Deal_Build_History__c/fields/in_inclusions__c.field-meta.xml
<CustomField>
    <fullName>in_inclusions__c</fullName>
    <label>in_inclusions</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>