force-app/main/default/objects/Deal_Build_History__c/fields/in_itinerary_title__c.field-meta.xml
<CustomField>
    <fullName>in_itinerary_title__c</fullName>
    <label>in_itinerary_title</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>