force-app/main/default/objects/Deal_Build_History__c/fields/in_name__c.field-meta.xml
<CustomField>
    <fullName>in_name__c</fullName>
    <label>in_name</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>