force-app/main/default/objects/Deal_Build_History__c/fields/in_transfers__c.field-meta.xml
<CustomField>
    <fullName>in_transfers__c</fullName>
    <label>in_transfers</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>