force-app/main/default/objects/Deal_Build_History__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>ov_Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>