force-app/main/default/objects/Deal_Build_History__c/fields/ti_Description__c.field-meta.xml
<CustomField>
    <fullName>ti_Description__c</fullName>
    <label>ti_Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>