force-app/main/default/objects/Deal_Build_History__c/fields/ti_name__c.field-meta.xml
<CustomField>
    <fullName>ti_name__c</fullName>
    <label>ti_name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>