force-app/main/default/objects/Deal_Build_History__c/fields/ti_Order__c.field-meta.xml
<CustomField>
    <fullName>ti_Order__c</fullName>
    <label>ti_Order</label>
    <type>TextArea</type>
</CustomField>