force-app/main/default/objects/Deal_Build_History__c/fields/ti_Site__c.field-meta.xml
<CustomField>
    <fullName>ti_Site__c</fullName>
    <label>ti_Site</label>
    <type>TextArea</type>
</CustomField>