force-app/main/default/objects/Deal_Build_History__c/fields/ti_Title__c.field-meta.xml
<CustomField>
    <fullName>ti_Title__c</fullName>
    <label>ti_Title</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>