force-app/main/default/objects/Deal_Build_History__c/fields/Type_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Record__c</fullName>
    <description>This field describe the history sored in this record is of which type.</description>
    <label>Type of Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Itinerary</fullName>
            </value>
            <value>
                <fullName>Attach Inclusion</fullName>
            </value>
            <value>
                <fullName>Tour Inclusion</fullName>
            </value>
            <value>
                <fullName>About the Property</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>